--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,7 +1,22 @@
+#HTML Report
 extent.reporter.spark.start=true
-extent.reporter.spark.out= extentReport.html
+extent.reporter.spark.out=ExtentHtmlReport.html
+
+#PDF Report
+extent.reporter.pdf.start=true
+extent.reporter.pdf.out=ExtentPdfReport.pdf
+
+#FolderName
+basefolder.name=target/ExtentReports/ExtentReport_
+basefolder.datetimepattern=d_MMM_YY HH_mm_ss
+
+#Screenshot
 screenshot.dir=/Screenshots/
 screenshot.rel.path=../Screenshots/
+
+#Base64
 extent.reporter.spark.base64imagesrc=true
-basefolder.name=target/extentReport/ExtentReport_
-basefolder.datetimepattern=d_MMM_YY HH_mm_ss
+
+#System Info
+systeminfo.os=windows
+systeminfo.version=11
