--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,18 @@
         <artifactId>extentreports-cucumber7-adapter</artifactId>
         <version>1.12.0</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.20.0</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.20.0</version>
+      </dependency>
           </dependencies>
           <build>
             <testResources>
@@ -78,7 +90,7 @@
                 <version>3.0.0-M7</version>
                 <configuration>
                   <includes>
-                    <include>**/*testrunner.java</include>
+                    <include>**/*TestRunner.java</include>
                   </includes>
                 </configuration>
                 <executions>
