--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
       <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
-        <version>4.9.0</version>
+        <version>3.13.0</version>
       </dependency>
       <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
       <dependency>
@@ -26,6 +26,11 @@
         <artifactId>webdrivermanager</artifactId>
         <version>5.5.3</version>
       </dependency>
+      <dependency>
+	    <groupId>net.lightbody.bmp</groupId>
+		<artifactId>browsermob-core</artifactId>
+		<version>2.1.5</version>
+	  </dependency>
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
